--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 .gitattributes
-
+loadtest/**
 ### STS ###
 .apt_generated
 .classpath
@@ -39,3 +39,5 @@ out/
 
 ### Kotlin ###
 .kotlin
+
+
